# pagultimo

./: CMakeLists.txt  Listener.h  Luz.cpp  Luz.h  Material.cpp  Material.h  Modelo.cpp  Modelo.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Textura.cpp  Textura.h  camara.cpp  camara.h  main.cpp
Shaders/: pag03-fs.glsl  pag03-vs.glsl  shader-fs.glsl  shader-vs.glsl  shadow-fs.glsl  shadow-vs.glsl
docs/: README.MD  uml.plantuml
glad/include/glad/: glad.h
glad/src/: glad.c
